# skolska-takmicenja

./: LICENSE  Pokreni_takmičenja.bat  Pravilnik.txt  README.md  best_student_report.py  bаза_takmicenja.db  login_frame.py  pyproject.toml  school.example  takmicenja.py
screens/: achievements_frame.py  best_student_report.py  competitions_frame.py  db.py  diploma_criteria.py  diploma_report.py  dositejeva_diploma_report.py  login_screen.py  reports_frame.py  scoring_rules.py  students_frame.py  users_frame.py  vukova_diploma_report.py
